# CrewAi-Helloworld

./: Building_effective_agents.ipynb  README.md
myproject/: pyproject.toml
