[project]
name = "myproject"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "AhmedRaza", email = "sheikhahlhmed670@gmail.com.com" }
]
requires-python = ">=3.11"
dependencies = [
    "crewai>=0.95.0",
    "litellm>=1.60.0",
]

[project.scripts]
myproject = "myproject:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
